# xKG

./: .env.example  .gitignore  AGENT_STARTUP_FIX_SUMMARY.md  DEBUGGING_SUMMARY.txt  FILE_INDEX.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PIPELINE.md  QUICK_START_AGENT_DEBUG.md  README.md  START_HERE.md  WORK_COMPLETION_REPORT.md  WORK_SUMMARY.md  pyproject.toml  requirements.txt  xKG_INTEGRATION_ARCHITECTURE.md  xkg.md
experiments/paperbench/project/alcatraz/: pyproject.toml
experiments/paperbench/project/alcatraz/alcatraz/clusters/: _container_proc.py  _serialization.py  interface.py  local.py
experiments/paperbench/project/alcatraz/alcatraz/utils/: cmds.py
experiments/paperbench/project/nanoeval/: README.md  pyproject.toml
experiments/paperbench/project/nanoeval/docs/: computer_tasks.md
experiments/paperbench/project/nanoeval/nanoeval/: __init__.py  _aiomonitor.py  _db.py  _executor_worker.py  _loop_watcher.py  _multiprocessing_utils.py  _persistent_db.py  async_breakpoint.py  asyncio_utils.py  eval.py  evaluation.py  evaluation_test.py  fs_paths.py  json_recorder.py  json_recorder_test.py  library_config.py  monitor.py  recorder.py  recorder_protocol.py  recorders.py  setup.py
experiments/paperbench/project/nanoeval/nanoeval/examples/: _gpqa.py  bundled_evals_test.py  gpqa_api.py  gpqa_mock.py  gpqa_mock_mp.py  gpqa_simple.py
experiments/paperbench/project/nanoeval/nanoeval/metrics/: agents.py  standard.py  standard_test.py
experiments/paperbench/project/nanoeval/nanoeval/solvers/: mcq.py  mcq_api.py  mcq_test.py  short_answer.py
experiments/paperbench/project/nanoeval/nanoeval/solvers/computer_tasks/: _serializable_base_model.py  _versioning.py  code_execution_interface.py  limits.py  limits_test.py  pausable_timer.py  pausable_timer_test.py  solver.py  steps.py  steps_test.py  task.py  task_test.py
experiments/paperbench/project/paperbench/: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  nohup.out  o3-base-bridge.txt  o3-mech-new-trial3.txt  o3-mech-new.txt  o3-original-kg.sh  out2.txt  pdf2json.txt  pyproject.toml  pytest.ini  r1_base_all_stay_fre.txt  r1_base_stay.txt  r1_base_stay1.txt  r1_base_stay2.txt  test.py
experiments/paperbench/project/paperbench/chz/: README.md  pyproject.toml
experiments/paperbench/project/paperbench/chz/chz/: factories.py  tiepin.py  validators.py
experiments/paperbench/project/paperbench/chz/chz/blueprint/: _wildcard.py
experiments/paperbench/project/paperbench/chz/tests/: test_blueprint_errors.py  test_blueprint_methods.py  test_blueprint_variadic.py  test_todo.py  test_validate.py
experiments/paperbench/project/paperbench/data/judge_eval/: .gitattributes  .gitignore
experiments/paperbench/project/paperbench/data/papers/adaptive-pruning/: addendum.md  blacklist.txt  config.yaml  paper.json  paper.md  rubric.json
experiments/paperbench/project/paperbench/data/papers/all-in-one/: addendum.md  blacklist.txt  config.yaml  contribution.json  guide.json  paper.json  paper.md  paper_cleaned.json  rubric.json
experiments/paperbench/project/paperbench/data/papers/bam/: addendum.md  blacklist.txt  config.yaml  paper.json  paper.md  rubric.json
experiments/paperbench/project/paperbench/exp_scripts/: count_top_technique.py  cout_valid_techniques.py  eval_tar.sh  pdf2json.sh  run_dummy_dev.sh
experiments/paperbench/project/paperbench/exp_scripts/aisi-basic/: run_deepseek_r1_dev.sh  run_deepseek_r1_ite.sh  run_o3_dev.sh  run_o3_iterative.sh
experiments/paperbench/project/paperbench/experiments/judge_eval/: .gitignore  judge_eval_perf_cost.py  judge_eval_perf_tables.py  run_judge_eval_sweep.sh
experiments/paperbench/project/paperbench/experiments/judge_max_depth/: plot.py  run.sh
experiments/paperbench/project/paperbench/experiments/pbcd_correlation/: plot.py
experiments/paperbench/project/paperbench/experiments/splits/: all.txt  debug.txt  dev.txt  human.txt  lite-description.txt
experiments/paperbench/project/paperbench/paperbench/: .gitattributes  .gitignore  constants.py  grader.Dockerfile  metrics.py  paper_registry.py  reproducer.Dockerfile  utils.py
experiments/paperbench/project/paperbench/paperbench/agents/: AGENTS_ANALYSIS.md  Dockerfile.base  agent.env.example  launch.json  pre-commit  registry.py  run.py  utils.py
experiments/paperbench/project/paperbench/paperbench/gui/: app.py
experiments/paperbench/project/paperbench/paperbench/infra/: alcatraz.py
experiments/paperbench/project/paperbench/paperbench/judge/: constants.py  create_judge.py  judge.py  utils.py
experiments/paperbench/project/paperbench/paperbench/monitor/: create_monitor.py  monitor.py
experiments/paperbench/project/paperbench/paperbench/nano/: README.md  entrypoint.py  eval.py  utils.py
experiments/paperbench/project/paperbench/paperbench/rubric/: tasks.py  utils.py
experiments/paperbench/project/paperbench/paperbench/scripts/: alcatraz_services.py  build-docker-images.sh  run_judge.py  run_judge_eval.py  run_monitor.py  run_reproduce.py  run_test.sh
experiments/paperbench/project/paperbench/scripts/: README.md  count_technique.py  initialize_target_with_corpus.sh  run_dummy_dev.sh  run_eval.sh  tar_file.sh
experiments/paperbench/project/paperbench/scripts/aisi-basic/: run.sh  run_debug.sh  run_knowledge.sh  run_o3_dev.sh  run_o3_iterative.sh
experiments/paperbench/project/paperbench/scripts/aisi-iterative/: run.sh  run_knowledge.sh
experiments/paperbench/project/paperbench/scripts/paper2code/: run.sh  run_knowledge.sh
(+439 files in other folders)
