[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xKG"
version = "0.1.0"
description = "Executable Knowledge Graphs for AI Research Replication"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Yujie Luo", email = "luo.yj@zju.edu.cn"}
]
dependencies = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.3",
    "rank-bm25>=0.2.2",
    "openai>=1.0.0",
    "python-dotenv>=0.19.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
build = [
    "pylatexenc>=2.10",
    "bibtexparser>=1.3.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.1",
    "docker>=6.0.0",
]

[tool.setuptools]
packages = ["xKG"]

[tool.setuptools.package-dir]
"" = "."
