[project]
name = "nanoeval"
version = "0.1.0"
dependencies = [
    "chz@git+https://github.com/openai/chz.git#egg=97cc0dfb5934a4b99c3a96bdcadcfdbe14812fe8",
    "aiodebug",
    "aiomonitor",
    "jinja2",
    "litecli",
    "matplotlib",
    "openai",
    "pandas",
    "blobfile",
    "boostedblob",
    "pyarrow",
    "pydantic>=2",
    "streamlit",
    "tqdm",
    "loky",
    "numpy",
    "more-itertools",
    "pytest-asyncio",
    "dill",
    "typing-extensions",
    "pydantic-core",
    "psutil",
    "ptpython",
    "ipython",
    "structlog",
    "pandas-stubs>=2.2.3.241126",
]

[tool.setuptools.packages.find]
include = ["nanoeval*"]

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true

# These two make life easier if you use a lot of untyped libraries:
warn_return_any = false
allow_untyped_calls = true

# Make mypy less nitpicky
warn_unused_ignores = false

# Do not use `ignore_missing_imports`, instead use:
disable_error_code = ["import-untyped"]

# If you don't want to force use of type annotations:
# allow_incomplete_defs = true
# allow_untyped_defs = true
# allow_any_generics = true