[build-system]
requires = ["setuptools<78.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperbench"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "openai>=1.44.1",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.5",
    "tenacity>=9.0.0",
    "flask>=3.0.3",
    "scikit-learn>=1.5.2",
    "openai>=1.54.3",
    "pytest-asyncio>=0.24.0",
    "pytest-html>=4.1.1",
    "drain3>=0.9.11",
    "chz@git+https://github.com/openai/chz.git#egg=97cc0dfb5934a4b99c3a96bdcadcfdbe14812fe8",
    "pre-commit>=4.1.0",
    "blobfile>=3.0.0",
    "tiktoken>=0.9.0",
    "python-dateutil>=2.9.0",
    "unidecode>=1.3.8",
]

[tool.setuptools]
packages = { find = { include = ["paperbench", "paperbench.*"] } }

[project.optional-dependencies]
formatters = ["black>=23.3", "isort>=5.13"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=4.0.0"
]

[tool.black]
line-length = 100  # match the .pre-commit-config.yaml
